# rdd2_desktop

./: README.md
rdd2_desktop/: CMakeLists.txt  package.xml
rdd2_rviz/: CMakeLists.txt  package.xml
rdd2_rviz/launch/: view_robot.launch.py
rdd2_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
rdd2_rviz_plugins/include/rdd2_rviz_plugins/: rdd2_panel.hpp
rdd2_rviz_plugins/src/: rdd2_panel.cpp
rddrone_desktop/: CMakeLists.txt  package.xml
rddrone_rviz/: CMakeLists.txt  package.xml
rddrone_rviz/launch/: view_robot.launch.py
rddrone_rviz/rviz/: robot.rviz
